--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "xml-report": "jrm combined.xml cypress/reports/junit/*.xml",
     "upload:s3": "node scripts/helper/archive.and.upload.js",
     "cy:open": "cypress open",
-    "cy:run": "cypress run --headed",
-    "cy:parallel": "cypress-parallel -s cy:run -t 2 -d ./cypress/e2e/demo/*",
+    "cy:run:allure": "cypress run --headed --env allure=true",
+    "allure:report": "allure generate allure-results --clean -o allure-report",
+    "cy:parallel": "cypress-parallel -s cy:run:allure -t 2 -d ./cypress/e2e/demo/*",
     "format": "prettier --write \"cypress/**/*.{js,ts,json}\"",
     "build": "node scripts/pre-build.js",
     "openshift": "npm install && npm install -g http-server && npm install -g rimraf && npm test && npm run openshift-clean",
